New ingest records API progress
Changes to the simple ingest API. The sourceId is needed there
as well.
